---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: 16. 07. 2018
  Minor Features:
    - Used new functions to restrict text fields to numbers only.
    - Added a button to import max exchange strings.
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 31. 05. 2018
  Bugfixes:
    - Fixed issue related to division by 0.
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 29. 05. 2018
  Minor Features:
    - Fixed RSO compatibility.
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 28. 05. 2018
  Major Features:
    - Updated for 0.17.
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 02. 12. 2018
  Minor Features:
    - Added custom event so that other mods are notified when I reset technologies.
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 14. 10. 2018
  Minor Features:
    - Added custom event so that other mods are notified when I delete nauvis.
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 16. 08. 2018
  Bugfixes:
    - Fixed that surface creation would fail under certain circumstances.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 27. 01. 2018
  Minor Features:
    - Added cliff settings to the options.
  Bugfixes:
    - Fixed that the player didnt consider tile transitions.
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 03. 01. 2018
  Bugfixes: