@@ -4,6 +4,7 @@ Date: 16. 07. 2018
   Minor Features:
     - Used new functions to restrict text fields to numbers only.
     - Added a button to import max exchange strings.
+    - Changed to reuse nauvis instead of creating its own surface, improves mod compatibility.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.2
 Date: 31. 05. 2018
